tests/rosetta/out/Fortran/abundant-deficient-and-perfect-number-classifications.error
gfortran: exit status 1
/tmp/abundant-deficient-and-perfect-number-classifications.f90:13:3:

   13 |   main()
      |   1
Error: Unclassifiable statement at (1)
/tmp/abundant-deficient-and-perfect-number-classifications.f90:32:5:

   32 |     i = 1
      |     1
Error: Symbol ‘i’ at (1) has no IMPLICIT type
/tmp/abundant-deficient-and-perfect-number-classifications.f90:19:15:

   19 |     do while (((p <= i) / 2))
      |               1
Error: Operands of binary numeric operator ‘/’ at (1) are LOGICAL(4)/INTEGER(4)
